# openmog

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/ai/: rules.md
memory-bank/: activeContext.md  changelog.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/openmog/: __init__.py  cli.py
tests/: __init__.py
